# wcauto

./: .gitignore  Application.py  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_EN.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py  wcauto.py
tests/: __init__.py  test_wcauto.py
wcauto/: WxResponse.py  __init__.py  wcauto.py  wx_response.py
wcauto2/: __init__.py  wcauto2.py  wx_response.py
